Tue Mar 13 14:31:38 CET 2007 Christian Anthon <anthon@kiku.dk>

	* <many> : silence a bunch of intel c compiler warnings (recomitting
	after savannah crash)

Fri 15 Mar 21:47:53 2007 GMT Jim Segrave <jes@j-e-s.net>

	* rollout.c - was using the 'this is a cube rollout' flag to
          decide whether to calculate JSDs from cubeful or cubeless equities

Sun 25 Feb 12:11:40 2007 GMT Jim Segrave <jes@j-e-s.net>

	* rollout.c : if settings were for cubeful rollouts, then
	  extending rollouts used cubeful equity. Threading aggravates
	  the problem, this is not a complete fix (rcRollout
	  is used globally but needs to be modified to match the set of
	  moves being rolled out. Ensuring it's put back for all
	  sequences which might terminate a rollout is non-trivial
	
Mon Feb 12 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* speed.c : Make calibration test multi-threaded

Wed Feb 14 11:07:07 CET 2007 Christian Anthon <anthon@kiku.dk>

	* multithread.h: first argument to MT_Safe* is pointer not value also
	when compiled without threads

Wed Feb 14 10:03:35 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in: remove pthread

Mon Feb 12 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* multithread.c : Remove pthread tls code and reduce #ifs/tidy win32 code

Sun Feb 11 22:18:33 CET 2007 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, eval.c, makebearoff.c, makehyper.c, rollout.c: small fixes
	to let gnubg and tools compile without warnings.

Thu Feb 08 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* multithread.c, rollout.c : Multi-thread rollouts.

Fri Feb 02 18:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* multithread.c/.h, lib/neuralnet.c, lib/neuralnetsse.c, lib/cache.c (new) : syncronize cache
		access, fix mis-aligned mingw thread stack, remove frombase optimisation for SSE.

Wed Jan 31 12:49:00 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, eval.c, gnubg.c, multithread.c,